--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,7 @@ layout: default
                         </a>
                     </li>
                     {% endif %}
+
                     {% if page.next.url %}
                     <li class="next">
                         <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">
@@ -46,18 +47,20 @@ layout: default
                     </li>
                     {% endif %}
                 </ul>
+
                 <hr style="visibility: hidden;">
 
                 {% if site.disqus_username %}
-                <!-- disqus 评论框 start -->
+                <!-- disqus  start -->
                 <div class="comment">
                     <div id="disqus_thread" class="disqus-thread"></div>
                 </div>
-                <!-- disqus 评论框 end -->
+                <!-- disqus  end -->
                 {% endif %}
 
                 {% if site.netease_comment %}
                 <!-- 网易云跟帖 评论框 start -->
+
                 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
                 <!-- 网易云跟帖 评论框 end -->
                 {% endif %}
